@@ -421,7 +421,10 @@ public class table extends TestCase
     assertEquals(0, db.executeQuery("SELECT l FROM  test.Person.charSet l WHERE l.Person=$1", ptr).size());
 
     //delete all entries, bug 673:
+    db.delete("test.validMdds.CharWithLength name", "name.name='bla'",null); 
     db.delete("test.validMdds.CharWithLength t", "5=5",null); 
+    db.delete("test.validMdds.CharWithLength	t", "t.name LIKE \"www\"",null); 
+    db.delete("test.validMdds.CharWithLength bla", "'x'=bla.name",null); 
   }
 
 
